Some style tweaks to the SR bar and fixed some of the header elements causing a horizontal scrollbar

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -9,6 +9,7 @@
     .redditname {
         position: absolute;
         top: 31px;
+        left: 0px;
         width: 100%;
     }
 
@@ -68,6 +69,8 @@
         width: 100%;
         height: 40px;
         @include wow-modern-box;
+        border-right: unset;
+        border-left: unset;
         background: rgba(0, 0, 0, 0.5);
     }
 }
@@ -100,15 +103,17 @@
 
 // header subreddit list
 #sr-header-area {
-
     background: rgba(0, 0, 0, 0.5);
     padding: 5px 0px 5px 5px;
     color: #EEEEEE;
     white-space: nowrap;
     border-bottom: 1px solid #1d1d1d;
+    text-shadow: 1px 1px 1px #000;
+
     a {
         color: #eee;
     }
+
     border-top-left-radius: 0;
     right: 10px;
     bottom: 6px;
@@ -116,6 +121,18 @@
     // allow res to override the position
     &.res-navTop {
         bottom: auto;
+    }
+
+    .drop-choices.srdrop {
+        @include wow-modern-box;
+        background: rgba(0, 0, 0, 0.9);
+        // Fix for subreddit dropdown below the logo
+        z-index: 99999;
+        font-size: 13px;
+        a {
+            text-transform: none !important;
+            margin: 2px 0px;
+        }
     }
 }
 
@@ -137,11 +154,6 @@
 .res-navTop #header-bottom-right {
     background: rgba(0, 0, 0, 0.5) !important;
     padding: 5px;
-}
-
-// Fix for subreddit dropdown below the logo
-#sr-header-area .drop-choices.srdrop {
-    z-index: 200;
 }
 
 .user, .separator {
